# chatless

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HTTP_CLIENT_SOLUTION.md  INSTALLATION_INSTRUCTIONS.md  INSTALLATION_INSTRUCTIONS_EN.md  LICENSE  PROVIDER_STATUS_REFACTOR_SUMMARY.md  README.md  README_EN.md  README_ZH.md  SECURITY.md  biome.json  eslint.config.mjs  index.html  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  test-new-rename.sh  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yml  ci.yml  manual-release.yml  tag-release-test.yml  tag-release.yml  test-release-notes.yml
docs/: dev_memo.md  model-add-troubleshooting.md
public/: update.json
public/llm-provider-icon/: _index.json
scripts/: cleanup-icons.js  copy-wasm.js  export-model-fetch-rules.mjs  extract-changelog.mjs  generate-icons-index.cjs  generate-settings-index.cjs  mcp-dev-servers.mjs  release.mjs  repushtag.mjs  set-version.mjs  update-app-info.js  updater-verify.mjs  updater.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  main.json
src-tauri/icons/: icon.icns
src-tauri/icons-windows/: icon.icns
src-tauri/src/: env_setup.rs  lib.rs  main.rs
src-tauri/src/lib/: document_parser.rs  http_client.rs  http_request.rs  onnx_logic.rs  sse.rs
src-tauri/src/mcp/: commands.rs  mod.rs  state.rs  types.rs
src-tauri/src/web_search/: commands.rs
src/app/: layout.tsx  metadata.ts  page.tsx
src/app/analytics/: page.tsx
src/app/chat/: layout.tsx  page.tsx
src/app/debug-headers/: page.tsx
src/app/dev-tools/: page.tsx
src/app/history/: page.tsx
src/app/knowledge/: page.tsx
src/app/prompts/: page.tsx
src/app/resources/: page.tsx
src/app/settings/: page.tsx
src/commands/: commandRegistry.ts  defaultCommands.ts  settingsCommands.ts
src/components/: CommandPalette.tsx  Sidebar.tsx  TauriApp.tsx
src/components/analytics/: AnalyticsHeader.tsx  AnalyticsToolbar.tsx  StatCard.tsx
src/components/chat/: AIMessageBlock.tsx  AnimatedCharFade.tsx  ApplyPromptModeDialog.tsx  ChatEmptyState.tsx  ChatHeader.tsx  ChatInitializing.tsx  ChatInput.tsx  ChatLayoutClient.tsx  ChatMessage.tsx  ChatMessageList.tsx  ChatMessages.tsx  ChatNavigator.tsx  ChatToolbar.tsx  CodeBlock.tsx  ConversationItem.tsx  ConversationSidebar.tsx  DeleteConversationDialog.tsx  DocumentReference.tsx  EditableTitle.tsx  EmptyChatView.tsx  ImageViewerModal.tsx  MemoizedMarkdown.tsx  Message.tsx  MessageNavigationMenu.tsx  ModelBrandLogo.tsx  ModelList.tsx  ModelParametersDialog.tsx  ModelSelectContent.tsx  ModelSelectItem.tsx  ModelSelector.tsx  NewMessageIndicator.tsx  PromptPill.tsx  RecentModelsList.tsx  ScrollIndicator.tsx  ScrollToBottomButton.tsx  SessionParametersDialog.tsx  SlashPromptPanel.tsx  StreamingMarkdown.tsx  ThinkingBar.tsx  ToolCallCard.tsx  (+2 more)
src/components/dev/: DatabaseRepairTool.tsx  DevToolsPanel.tsx  EnvironmentDebug.tsx  EnvironmentStatus.tsx  PerformanceMonitor.tsx  PerformanceReport.tsx  SampleDataManager.tsx
src/components/devtools/: HttpRequestDebugger.tsx
src/components/history/: HistoryCard.tsx  HistoryHeader.tsx  HistoryList.tsx  HistoryQuickFilter.tsx  HistoryStats.tsx  HistoryToolbar.tsx
src/components/icons/: SidebarIcons.tsx
src/components/knowledge/: AddDocumentsDialog.tsx  CollapsibleKnowledgeInfo.tsx  CreateKnowledgeDialog.tsx  EditKnowledgeDialog.tsx  KnowledgeBaseCard.tsx  KnowledgeBaseItem.tsx  KnowledgeCard.tsx  KnowledgeDetail.tsx  KnowledgeFilterBar.tsx  KnowledgeLayout.tsx  KnowledgeTabs.tsx  RAGQueryInterface.tsx  RecentKnowledgeList.tsx  knowledgeMenu.ts
src/components/layout/: ChatLayout.tsx  ChatListItem.tsx  SidebarFooter.tsx  SidebarHeader.tsx
src/components/mcp/: CacheStatsPanel.tsx  McpToolListTip.tsx
src/components/prompts/: CategorySidebar.tsx  PromptCard.tsx  PromptEditorDialog.tsx  PromptImportExport.tsx  PromptList.tsx  PromptsEmptyState.tsx  PromptsHeader.tsx  PromptsToolbar.tsx
src/components/resources/: AddToKnowledgeBase.tsx  RecentlyReferenced.tsx  ResourceItem.tsx  ResourceList.tsx  ResourceManager.tsx  ResourceUploader.tsx  types.ts
src/components/settings/: AboutSupportSettings.tsx  AddProvidersDialog.tsx  AdvancedMcpSettingsDialog.tsx  AdvancedSettings.tsx  AdvancedSettingsDialog.tsx  AiModelSettings.tsx  CollapsibleCard.tsx  EmbeddingModelManager.tsx  EmbeddingServiceStatus.tsx  GeneralSettings.tsx  InfoBanner.tsx  InputField.tsx  KnowledgeBaseSettings.tsx  ModelCard.tsx  (+35 more)
src/config/: app-info.ts  modelFetchRules.ts  settingsIndex.json  settingsIndex.ts
src/contexts/: SidebarContext.tsx
src/hooks/: useChatActions.ts  useGlobalFontSize.ts  useMarkdownFontSize.ts  useMarkdownTheme.ts  useModelSelection.ts  useProviderManagement.ts  useScrollManagement.ts
src/lib/: ai-providers.ts  avatar.ts  db.ts  documentParser.ts  historyService.ts  knowledgeBaseConfig.ts  knowledgeService.ts  logger.ts  model-parameters.ts  models.json  recentRoutes.ts  request-patches.ts  request.ts  sampleDataInitializer.ts  sse-client.ts  storage.ts  tray.ts  unifiedFileService.ts  utils.ts
src/scripts/: dev-db-check.ts  dev-db-clear.ts  dev-db-menu.ts  dev-db-reset.ts
src/store/: authorizationStore.ts  chatStore.ts  historyStore.ts  index.ts  markdownPreferences.ts  mcpStore.ts  modelCheckStore.ts  networkPreferences.ts  ollamaStore.ts  promptStore.ts  providerMetaStore.ts  providerStatusStore.ts  providerStore.ts  schemaHelperStore.ts  uiPreferences.ts  uiSession.ts  webSearchStore.ts
src/styles/: folding-loader.css  globals.css  markdown.css  thinkbar-animations.css  variables.css
src/types/: ambient-tauri-plugin-sql.d.ts  chat.ts  document.ts  history.ts  message-viewmodel.ts  model-params.ts  onnxruntime-web.d.ts  pdf-parse.d.ts  prompt.ts  streamdown.d.ts
(+261 files in other folders)
